[build-system]
requires = [
    "setuptools>=61.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pvn3d"
version = "0.0.0"
description = "PVN3D package"
requires-python = ">=3.7"
dependencies = [ 
    # runtime dependencies skipped by --no-deps flag
]

[tool.setuptools]
packages = ["pvn3d"]

[tool.setuptools.package-data]
pvn3d = ["lib/pointnet2_utils/*.so"]